update-manager (0.44.1) edgy; urgency=low

  * make UpdateManager check for new distribution releases by
    default again
  * fix dist-upgrade fetching when run as root. 

 --

update-manager (0.44) edgy; urgency=low

  * new SoftwareProperties GUI (thanks to Sebastian Heinlein)
  * support easy Popcon pariticipation

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 28 Jul 2006 01:06:16 +0200

update-manager (0.43) edgy; urgency=low

  * fixes in the changelog reading code
  * speedup in the cache clear code
  * runs as user by default now
  * uses dbus to implement singleton behaviour
  * updated the software-properties code to know about edgy

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue,  4 Jul 2006 11:16:31 +0200

update-manager (0.42.2ubuntu22) dapper; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix a 'brown paperback' bug when the Meta-Release file
      checked (#46537)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 May 2006 12:30:42 +0200

update-manager (0.42.2ubuntu21) dapper; urgency=low

  * UpdateManager/UpdateManager.py:
    - when a distribution release becomes available, display the 
      version, not the codename (as per 
      https://wiki.ubuntu.com/CodeNamesToVersionNumbers)
    - fix a string that was not marked transltable

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 24 May 2006 15:07:19 +0200

update-manager (0.42.2ubuntu20) dapper; urgency=low

  * SoftwareProperties/aptsources.py, channels/Ubuntu.info.in:
    - remove the codenames from the releases (as per 
      https://wiki.ubuntu.com/CodeNamesToVersionNumbers)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 May 2006 16:04:39 +0200

update-manager (0.42.2ubuntu19) dapper; urgency=low

  * help/C/figures:
    - applied "pngcrush" on the figures in the manual,
      this saves 4 MB uncompressed (ubuntu: #45901)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 May 2006 09:37:19 +0200

update-manager (0.42.2ubuntu18) dapper; urgency=low
