@@ -3,6 +3,7 @@ update-manager (0.44.1) edgy; urgency=low
   * make UpdateManager check for new distribution releases by
     default again
   * fix dist-upgrade fetching when run as root. 
+  * sort the package list by the origin (UpdateManagerEdgy spec)
 
  --
 
